# llm-eval-suite

./: Makefile  README.md  pyproject.toml
benchmarks/: bench_core.py
docs/: architecture.md  interview-prep.md
examples/: quickstart.py
social/: linkedin-post.md  x-post.md
src/llm_eval_suite/: __init__.py  cli.py  core.py  exceptions.py  judge.py  models.py  rubrics.py  storage.py  utils.py
tests/: conftest.py  test_core.py  test_judge.py  test_models.py  test_rubrics.py  test_storage.py
