[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-suite"
version = "0.1.0"
description = "Evaluation framework with LLM-as-judge and custom rubrics for production LLM quality assessment"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rajath John", email = "jrajath94@gmail.com"},
]
keywords = ["llm", "evaluation", "llm-as-judge", "rubrics", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
llm-eval = "llm_eval_suite.cli:main"

[project.urls]
Homepage = "https://github.com/jrajath94/llm-eval-suite"
Repository = "https://github.com/jrajath94/llm-eval-suite.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src/llm_eval_suite"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true

[[tool.mypy.overrides]]
module = ["rich", "click"]
ignore_missing_imports = true
